# Tournament-tracker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bash  entrypoint.sh  run.bash  run.batsh
backend/: backend_services.py  classes.py  flask_interface.py
frontend/: apiClient.cpp  apiClient.h  api_client.cpp  api_client.h  inputDialog.cpp  inputDialog.h  input_dialog.cpp  input_dialog.h  main.cpp  mainPage.h  mainwindow.cpp  mainwindow.h  tournamentPage.h
frontend/resources/: resources.qrc
